--- a/doc/DokumenSkripsi/Bab/bab2.tex
+++ b/doc/DokumenSkripsi/Bab/bab2.tex
@@ -37,7 +37,7 @@ Fitur-fitur yang dimiliki DevTools antara lain:
 	\item \textit{Resources}, memeriksa sumber daya halaman yang dapat berupa basis data, \textit{cookies}, dan \textit{cache}.
 \end{enumerate}
 
-\begin{figure}
+\begin{figure}[H]
 	\centering
 	\includegraphics[scale=0.5]{Gambar/chrome-devtools}
 	\caption{Chrome DevTools} 
