--- a/doc/DokumenSkripsi/pustaka.bib
+++ b/doc/DokumenSkripsi/pustaka.bib
@@ -9,8 +9,8 @@
 }
 
 @misc{studentportalunpar,
-	author = {Biro Teknologi Informasi UNPAR},
-	title = {Student Portal UNPAR},
+	author = "{Biro Teknologi Informasi UNPAR}",
+	title = "{Student Portal UNPAR}",
 	howpublished = "\url{https://studentportal.unpar.ac.id}",
 	year = {2012}, 
 	note = "[Online; diakses 1-Juli-2015]"
@@ -18,7 +18,7 @@
 
 @misc{jsoup,
 	author = {Jonathan Hedley},
-	title = {jsoup},
+	title = "{jsoup: Java HTML Parser}",
 	howpublished = "\url{http://jsoup.org}",
 	year = {2009-2015}, 
 	note = "[Online; diakses 1-Juli-2015]"
@@ -26,7 +26,7 @@
 
 @misc{devtools,
 	author = {Google},
-	title = {Chrome DevTools},
+	title = "{Chrome DevTools}",
 	howpublished = "\url{https://developer.chrome.com/devtools}",
 	year = {2013}, 
 	note = "[Online; diakses 1-Juli-2015]"
@@ -34,8 +34,26 @@
 
 @misc{siamodels,
 	author = {Pascal Alfadian},
-	title = {SIA Models},
+	title = "{SIA Models}",
 	howpublished = "\url{https://github.com/pascalalfadian/SIAModels}",
 	year = {2015}, 
 	note = "[Online; diakses 1-Juli-2015]"
 }
+
+@misc{prasyaratIT,
+	author = "{Program Studi Teknik Informatika}",
+	title = "{PRASAYARAT MATA KULIAH SEMESTER GANJIL 2015/2016}",
+	howpublished = "\url{https://tinyurl.com/lionov}",
+	year = {2015}, 
+	month = "{Juli}",
+	note = "[Online; diakses 1-Juli-2015]"
+}
+
+@inproceedings{Vargiu:2013,
+	 address              = {Barcelona,Spain},
+	 author               = {Vargiu, Eloisa and Urru, Mirko},
+	 booktitle            = {Artificial Intelligence Research},
+	 pages                = {44--50},
+	 title                = {Exploiting web scraping in a collaborative filtering-based approach to web advertising},
+	 year                 = {2013},
+ }
