--- a/doc/DokumenSkripsi/Bab/bab1.tex
+++ b/doc/DokumenSkripsi/Bab/bab1.tex
@@ -41,25 +41,25 @@ berikut:
 \label{sec:tujuan}
 
 Tujuan-tujuan yang hendak dicapai melalui penulisan skripsi ini sebagai berikut:
-\begin{itemize}
+\begin{enumerate}
 	\item	Mengetahui fitur-fitur yang akan dibuat dalam IT Student Portal.
 	\item	Mengimplementasikan \textit{web scraping} menggunakan \textit{library} jsoup.
 	\item Membangun aplikasi IT Student Portal.
-\end{itemize}
+\end{enumerate}
 
 \section{Batasan Masalah}
 \label{sec:batasan_masalah}
 
 Beberapa batasan yang dibuat terkait dengan pengerjaan skripsi ini sebagai berikut:
-\begin{itemize}
+\begin{enumerate}
 	\item Prasyarat mata kuliah yang tersedia hanya mata kuliah yang didukung SIA Models.
 	\item Aplikasi akan diuji pada server FTIS sehingga tidak bisa diakses dari luar jaringan FTIS.
-\end{itemize}
+\end{enumerate}
 
 \section{Metode Penelitian}
 \label{sec:metode_penelitian}
 
-Berikut ini adalah metode-metode yang dilakukan pada penelitian ini:
+Metode-metode yang dilakukan pada penelitian ini sebagai berikut:
 
 \begin{enumerate}
 	\item Melakukan studi mengenai \textit{library} jsoup, Chrome DevTools, dan Play Framework.
