--- a/doc/DokumenSkripsi/Bab/bab2.tex
+++ b/doc/DokumenSkripsi/Bab/bab2.tex
@@ -4,19 +4,90 @@
 \section{jsoup}
 \label{sec:jsoup}
 
-\textit{Web scraping} adalah teknik mendapatkan informasi dari sebuah \textit{website} secara otomatis. Dalam Java, \textit{web scraping} dapat diimplementasikan menggunakan \textit{library} jsoup \cite{jsoup}. API yang disediakan oleh jsoup dapat digunakan untuk mengekstrak dan memanipulasi data seperti HTML. 
+\textit{Web scraping}\cite{Vargiu:2013} adalah teknik mendapatkan informasi dari sebuah situs \textit{web} secara otomatis. Dalam Java, \textit{web scraping} dapat diimplementasikan menggunakan \textit{library} jsoup\cite{jsoup}. API yang disediakan oleh jsoup dapat digunakan untuk mengekstrak dan memanipulasi data HTML. 
 
-Untuk mendapatkan data dari suatu \textit{website}, jsoup harus membuat koneksi terlebih dahulu dengan \textit{website} tersebut. Koneksi pada jsoup direpresentasikan oleh kelas Connection. \textit{Method} "`connect(String url)"' dapat dipanggil untuk membuat objek Connection baru dengan melempar IOException. Koneksi akan dibuat dengan mengirimkan HTTP \textit{request}. \textit{Method} "`connect(String url)"' merupakan \textit{static method} yang dimiliki oleh kelas Jsoup. Setelah membuat koneksi baru, objek Connection perlu memperhatikan pemanggilan \textit{method-method} berikut:
-\begin{enumerate}
-	\item \textbf{cookies()}, digunakan untuk menambahkan \textit{cookie} yang dikirim ke dalam \textit{request}.
-	\item \textbf{data()}, digunakan untuk menambahkan parameter data ke dalam \textbf{request}.
-	\item \textbf{timeout()}, digunakan untuk mengatur \textit{timeout request}.
-	\item \textbf{validateTLSCertificates()}, digunakan untuk mengatur pemeriksaan sertifikat TLS untuk HTTPS \textit{request}. 
-	\item \textbf{method()}, digunakan untuk mengatur metode pengiriman \textit{request}. 
-	\item \textbf{execute()}, digunakan untuk mengirim \textit{request}. 
-\end{enumerate}
+Subbab-subbab berikut menjelaskan kelas-kelas dari jsoup yang terkait dengan penelitian ini.
 
-Dengan pemanggilan \textit{method} execute(), jsoup akan mengirim \textit{request} ke website yang dituju. Kemudian jsoup akan menerima \textit{response} dari website tersebut. Dalam jsoup, HTTP \textit{response} direpresentasikan dalam kelas Response, maka HTTP \textit{response} yang diterima akan disimpan ke dalam objek Response yang kemudian akan dikembalikan oleh \textit{method} execute().
+\subsection{Jsoup}
+
+Kelas ini merupakan inti untuk mengakses fungsi jsoup. Salah satu \textit{method} yang dimiliki kelas ini adalah sebagai berikut:
+\begin{itemize}
+	\item \textbf{public static Connection connect(String url)} \\
+		Berfungsi untuk membuat koneksi baru dengan suatu situs \textit{web}. \\
+		\textbf{Parameter:}
+		\begin{itemize}
+			\item \textbf{url} URL situs \textit{web} dengan protokol HTTP atau HTTPS.
+		\end{itemize}
+		\textbf{Kembalian:} koneksi dengan situs \textit{web}.
+\end{itemize}
+
+\subsection{Connection}
+
+Kelas ini merupakan interface yang menyediakan pengambilan data dari situs \textit{web}. Beberapa \textit{method} yang dimiliki kelas ini adalah sebagai berikut:
+
+\begin{itemize}
+	\item \textbf{Connection cookies(Map<String,String> cookies)} \\
+		Berfungsi untuk menambahkan \textit{cookie}. \\
+		\textbf{Parameter:}
+		\begin{itemize}
+			\item \textbf{cookies} \textit{map} dari \textit{cookie}.
+		\end{itemize}
+		\textbf{Kembalian:} koneksi dengan situs \textit{web}.
+		
+		\item \textbf{Connection data(String key, String value)} \\
+		Berfungsi untuk menambahkan parameter data. \\
+		\textbf{Parameter:}
+		\begin{itemize}
+			\item \textbf{key} kunci data.
+			\item \textbf{value} nilai data.
+		\end{itemize}
+		\textbf{Kembalian:} koneksi dengan situs \textit{web}.
+		
+		\item \textbf{Connection method(Connection.Method method)} \\
+		Berfungsi untuk mengatur metode pengiriman. \\
+		\textbf{Parameter:}
+		\begin{itemize}
+			\item \textbf{method} metode pengiriman HTTP \textit{request}.
+		\end{itemize}
+		\textbf{Kembalian:} koneksi dengan situs \textit{web}.
+		
+		\item \textbf{Connection timeout(int millis)} \\
+		Berfungsi untuk mengatur batas waktu \textit{request}. Batas waktu nol akan dianggap sebagai batas waktu yang tak terhingga. \\
+		\textbf{Parameter:}
+		\begin{itemize}
+			\item \textbf{millis} banyaknya milisekon sebelum batas waktu.
+		\end{itemize}
+		\textbf{Kembalian:} koneksi dengan situs \textit{web}.
+		
+		\item \textbf{Connection validateTLSCertificates(boolean value)} \\
+		Berfungsi untuk mengatur pemeriksaan sertifikat TLS untuk HTTPS \textit{request}. Nilai "`true"' untuk memeriksa dan nilai "`false"' untuk tidak memeriksa.\\
+		\textbf{Parameter:}
+		\begin{itemize}
+			\item \textbf{value} status pemeriksaan sertifikat TLS.
+		\end{itemize}
+		\textbf{Kembalian:} koneksi dengan situs \textit{web}.
+		
+		\item \textbf{Connection.Response execute()} \\
+		Berfungsi untuk mengirim \textit{request}.\\
+		\textbf{Parameter:} tidak ada
+		\textbf{Kembalian:} objek Response.	
+\end{itemize}
+
+\subsection{Response}
+
+Kelas ini merepresentasikan HTTP \textit{response}. Response merupakan turunan dari kelas Base yang menangani response dan \textit{request}. Beberapa \textit{method} yang dimiliki kelas ini adalah sebagai berikut:
+\begin{itemize}
+	\item \textbf{Map<String,String> cookies()} \\
+		\textit{Method} ini diturunkan dari kelas Base, berfungsi untuk mendapatkan seluruh \textit{cookies}. \\
+		\textbf{Parameter:} tidak ada.
+		\textbf{Kembalian:} seluruh \textit{cookies}.
+		
+		\item \textbf{Document parse()} \\
+		Berfungsi untuk \textit{parsing} \textit{response body} menjadi dokumen. \\
+		\textbf{Parameter:} tidak ada.
+		\textbf{Kembalian:} koneksi dengan situs \textit{web}.
+\end{itemize}
+
 
 Response yang diperoleh akan di-\textit{parse} ke dalam bentuk \textit{Document Object Model} (DOM) yang direpresentasikan dalam kelas Document. Proses parsing dapat dilakukan dengan pemanggilan method parse() oleh objek Response. Document yang telah diperoleh dari hasil parsing dapat diseleksi untuk mendapatkan data yang diinginkan. Dalam menyeleksi Document, jsoup memanfaatkan CSS \textit{Selector} untuk mendapatkan elemen HTML yang dipanggil oleh objek Document dengan method select(). Hasil proses seleksi akan ditampung ke dalam objek bertipe Elements yang merepresentasikan elemen-elemen pada HTML. 
 
