--- a/doc/DokumenSkripsi/Bab/bab2.tex
+++ b/doc/DokumenSkripsi/Bab/bab2.tex
@@ -153,7 +153,7 @@ Kelas ini merepresentasikan sebuah elemen HTML yang berisikan \textit{tag}, atri
 \section{Chrome DevTools}
 \label{sec:devtools}
 
-Chrome Developer Tools (DevTools) \cite{devtools} adalah perangkat \textit{debugging} yang dimiliki Google Chrome. Saat menunjungi suatu website, pengguna DevTools dapat melakukan debugging pada website tersebut. DevTools dapat diakses dengan menekan "`Ctrl+Shift+I"' saat sedang membuka suatu website.  
+Chrome Developer Tools (DevTools) \cite{devtools} adalah perangkat \textit{debugging} yang dimiliki Google Chrome. Saat menunjungi suatu halaman web, pengguna DevTools dapat melakukan \textit{debugging} pada halaman tersebut. DevTools dapat diakses dengan menekan "`Ctrl+Shift+I"' saat sedang membuka suatu halaman web.  
 
 Fitur-fitur yang dimiliki DevTools antara lain:
 \begin{enumerate}
@@ -176,6 +176,8 @@ Fitur-fitur yang dimiliki DevTools antara lain:
 
 Pada subbab-subbab berikut akan dijelaskan mengenai dua panel dari DevTools.
 \subsection{Elements}
+Panel Elements memungkinkan untuk memperlihatkan informasi yang terstruktur tentang halaman yang sedang dibuka. HTML akan ditampilkan dalam bentuk pohon \textit{Document Object Model} (DOM). Tampilan pohon DOM memperlihatkan struktur DOM dari halaman yang sedang dibuka. Pohon DOM adalah pohon dari node-node yang mewakili setiap elemen HTML seperti \texttt{<body>} dan \texttt{<p>}. Tampilan struktur pohon DOM menampilkan tag elemen HTML bukan jenis node DOM: misalnya, \texttt{<p>} bukan \texttt{HTMLParagraphElement}.
+
 \subsection{Network}
 
 \section{Play Framework}
