--- a/doc/DokumenSkripsi/Bab/bab3.tex
+++ b/doc/DokumenSkripsi/Bab/bab3.tex
@@ -1,6 +1,78 @@
 \chapter{Analisis}
 \label{chap:analisis}
 
+\section{Analisis Student Portal UNPAR}
+Portal Akademik Mahasiswa merupakan sebuah situs jaringan yang diperuntukan bagi mahasiswa dalam rangka mendapatkan informasi kegiatan akademik. Portal Akademik Mahasiswa atau sering disebut dengan Student Portal UNPAR yang dapat diakses dengan alamat \url{www.studentportal.unpar.ac.id}. Untuk mengakses Student Portal UNPAR, mahasiswa UNPAR dapat \textit{login} menggunakan akun email \textit{student}. Halaman \textit{login} Student Portal UNPAR terintegrasi dengan CAS (\textit{Central Authentication Service}) UNPAR.
+
+Pada halaman utama Student Portal, terdapat beberapa bagian yaitu:
+\begin{enumerate}
+	\item Menu Atas\\
+	Menu ini berfungsi sebagai menu pendukung yang terdiri dari : 
+	\begin{itemize}
+		\item \textbf{Home}, menampilkan informasi atau pengumuman yang dikeluarkan oleh fakultas masing-masing. 
+		\item \textbf{Kuliah}, menampilkan pengumuman per-matakuliah sesuai dengan matakuliah dan kelas yang diambil oleh masing-masing mahasiswa.  
+		\item \textbf{Profil}, berisi tentang data diri masing-masing mahasiswa. 
+		\item \textbf{Komentar}, berisi komentar, saran, dan kritik dari mahasiswa.
+	\end{itemize}
+	
+	\item Identitas Portal \\
+	Bagian ini menampilkan identitas pengguna portal. Tampilan identitas ini dapat ditampilkan lengkap dengan melakukan klik pada \textit{link} "`selengkapnya"'atau ditampilkan minimal dengan klik \textit{link} "`tutup"'. Identitas yang ditampilkan adalah nama, Nomor Pokok Mahasiswa (NPM), status keaktifan, pas foto, email, dosen wali, program studi, dan fakultas.   
+	
+	\item Menu Utama\\
+	Bagian ini memuat fitur utama Student Portal yang terdiri dari:
+	\begin{itemize}
+	
+		\item \textbf{Rencana Studi}\\
+		Menu Rencana Studi terdiri dari submenu: 
+		\begin{itemize}
+			\item Registrasi (FRS/PRS)\\
+			Digunakan sebagai formulir pengisian rencana studi awal (FRS) dan perubahan rencana studi (PRS). 
+			\item Kartu Rencana Studi \\
+			Menampilkan informasi mata kuliah yang telah diambil melalui submenu Registrasi. Kartu Rencana Studi juga dapat dicetak melalui submenu ini. 
+			\item Pindah Kelas MKU \\
+			Mahasiswa dapat memilih kelas yang masih tersedia di kolom Jadwal Baru dan menekan tombol "`Simpan"' untuk setiap kelas yang diubah. 
+		\end{itemize}
+		
+		\item \textbf{ Jadwal}\\
+		Menu Jadwal terdiri dari submenu: 
+		\begin{itemize}
+			\item Kuliah, UTS dan UAS \\
+			Submenu ini berisi tentang jadwal kuliah, UTS dan UAS yang bisa yang disusun per semester. 
+			\item MKU \\
+			Submenu ini menampilkan seluruh jadwal Mata Kuliah Umum (MKU) yang memberikan informasi tentang kelas-kelas yang dibuka oleh Pusat Kajian Humaniora (PKH). 
+			\item Seluruh Fakultas \\
+			Fitur ini memberikan informasi mengenai jadwal-jadwal yang ada di seluruh fakultas.
+		\end{itemize}
+		
+		\item \textbf{Nilai dan Indeks Prestasi}\\
+		Menu Nilai dan Indeks Prestasi terdiri dari submenu: 
+		\begin{itemize}
+			\item Riwayat per Semester \\
+			Submenu ini menampilkan informasi nilai per semester. Mahasiswa dapat melihat nilai sesuai dengan semester yang dipilih atau bisa memilih
+pilihan "`Seluruh Tahun Akademik"' untuk melihat seluruh nilai berdasarkan semester.
+			\item Daftar Perkembangan Studi \\
+			Seluruh riwayat mata kuliah dan nilai yang pernah ditempuh ditampilkan di submenu ini. Pada bagian bawah halaman, terdapat statistik nilai dan indeks prestasi. 
+			\item Riwayat Indeks Prestasi \\
+			Menampilkan daftar riwayat indeks prestasi semester dan kumulatif setiap semester. Tampilan ini juga dilengkapi dengan grafik perkembangan. 
+			\item TOEFL \\
+			Menampilkan daftar riwayat skor \textit{ Test of English as Foreign Language} (TOEFL) yang pernah ditempuh. Mahasiswa diwajibkan untuk menempuh TOEFL dengan skor minimal 500.
+		\end{itemize}
+		
+		\item \textbf{Pembayaran Uang Kuliah}\\
+		Menu ini berfungsi untuk melihat data tagihan pembayaran uang kuliah serta cara-cara pembayarannya.
+	\end{itemize}
+	
+	\item \textbf{Informasi}\\
+		Bagian ini menampilkan informasi tentang periode-periode yang sedang aktif.
+	\item \textbf{Kalender}\\
+		Bagian ini menampilkan kalendar masehi.
+	\item \textbf{Info Browser}\\
+		Bagian ini menampilkan informasi tentang internet \textit{browser} yang digunakan pada saat membuka Student Portal. 
+\end{enumerate}
+
+
+
+
 \section{Analisis Fitur-fitur FTIS Student Portal}
 \label{sec:fitur}
 
