--- a/doc/DokumenSkripsi/Bab/bab2.tex
+++ b/doc/DokumenSkripsi/Bab/bab2.tex
@@ -202,9 +202,13 @@ Panel Network secara otomatis mencatat semua aktivitas jaringan saat DevTools te
 Ketika nama \textit{resource} dalam tabel Network diklik, maka akan muncul tab baru. Beberapa detail dari tab baru tersebut adalah sebagai berikut:
 \begin{itemize}
 	\item \textbf{Header}\\
+	Tab Header menampilkan \textit{request} URL, \textit{request method}, \textit{status code}, HTTP \textit{response} dan \textit{request header} beserta nilainya, dan \textit{query string parameter}. HTTP header dapat ditampilkan secara terformat atau dalam bentuk sumber dengan mengklik \textit{toggle button} "`view parsed"'/"`view source"'. Nilai-nilai parameter dapat ditampilkan dalam bentuk yang sudah didekodekan atau dalam bentuk URL yang dienkode dengan mengklik \textit{toggle button} "`view decoded"'/"`view URL encoded"' .
 	\item \textbf{Preview}\\
+	Tab Preview menampilkan tampilan \textit{resource} jika tersedia.
 	\item \textbf{Response}\\
+	Tab Response berisi konten resource yang tidak terformat.
 	\item \textbf{Cookies}\\
+	Tab Cookies menampilkan sebuah tabel yang terdiri dari seluruh cookie yang ditransmisikan dalam HTTP request dan response header
 \end{itemize}
 
 \section{Play Framework}
