--- a/doc/DokumenSkripsi/Bab/bab3.tex
+++ b/doc/DokumenSkripsi/Bab/bab3.tex
@@ -70,19 +70,24 @@ pilihan "`Seluruh Tahun Akademik"' untuk melihat seluruh nilai berdasarkan semes
 		Bagian ini menampilkan informasi tentang internet \textit{browser} yang digunakan pada saat membuka Student Portal. 
 \end{enumerate}
 
-
-
-
-\section{Analisis Fitur-fitur FTIS Student Portal}
-\label{sec:fitur}
-
-Berdasarkan penelitian, fitur-fitur yang diperlukan IT Student Portal adalah sebagai berikut:
-
+\section{Analisis Kebutuhan IT Student Portal}
+Setelah melakukan wawancara dengan beberapa mahasiswa Program Studi Teknik Informatika UNPAR, diperoleh fitur-fitur sebagai berikut:
 \begin{enumerate}
-
-\item Prasayarat Mata Kuliah \\
-Masalah lain yang sering dialami FTIS adalah kesalahan dalam mengisi Formulir Rencana Studi(FRS). Meskipun sudah diberi daftar mata kuliah beserta prsyaratnya, mahasiswa sering kali lalai dalam memeriksa prasyarat tersebut. Selain itu, tidak semua dosen wali tahu prasyarat mata kuliah yang akan diambil sehingga dosen wali menyetujui mata kuliah yang masih belum boleh diambil. Akibatnya, banyak terjadi kesalahan dalam pengambilan mata kuliah. Kesalahan tersebut akan diperiksa oleh sekretaris jurusan. Artinya, sekretaris jurusan harus memeriksa kartu rencana studi setiap mahasiswa kemudian memeriksa prasyarat dari setiap mata kuliah yang diambil. 
-
-Oleh karena itu, fitur prasyarat mata kuliah akan dibuat dalam IT Student Portal.  Prasyarat mata kuliah dapat berupa mata kuliah dan sks lulus. Jika pemeriksaan prasyarat mata kuliah dapat dilakukan oleh sistem, maka kesalahan pengambilan mata kuliah semakin berkurang. Selain itu, dosen wali dan sekretaris jurusan tidak perlu melakukan pemeriksaan lebih lanjut. 
-
+	\item Pemeriksaan prasyarat mata kuliah
+	\item Pemeriksaan sisa sks
+	\item DPS dapat berubah sesuai
+	\item Detail Kuliah
+	\item dll
 \end{enumerate}
+Fitur-fitur yang akan dipilih harus memenuhi kriteria:
+\begin{itemize}
+	\item Dibuat untuk mempermudah penggunaan Student Portal
+	\item Didukung Student Portal
+\end{itemize}
+Berdasarkan kriteria di atas dan batas waktu pembangunan aplikasi, maka akan dipilih fitur-fitur sebagai berikut:
+\begin{enumerate}
+	\item Prasyarat mata kuliah
+\end{enumerate}
+
+\section{Analisis Komunikasi Student Portal untuk Fitur IT Student Portal}
+
